front-envoy.yaml
static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 80
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          tracing:
            operation_name: egress
          codec_type: auto
          stat_prefix: ingress_http
          access_log:
            - name: envoy.file_access_log
              config:
                path: "/var/log/access.log"
          route_config:
            name: local_route
            virtual_hosts:
            - name: backend
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/service/1"
                route:
                  cluster: service1
                decorator:
                  operation: checkAvailability
              - match:
                  prefix: "/trace/1"
                route:
                  cluster: service1
                decorator:
                  operation: checkAvailability
              - match:
                  prefix: "/service/2"
                route:
                  cluster: service2
                decorator:
                  operation: checkStock
              - match:
                  prefix: "/trace/2"
                route:
                  cluster: service2
                decorator:
                  operation: checkStock
          http_filters:
          - name: envoy.router
            config: {}
  clusters:
  - name: service1
    connect_timeout: 0.250s
    type: EDS
    lb_policy: round_robin
    http2_protocol_options: {}
    eds_cluster_config:
      eds_config:
        api_config_source:
          api_type: REST_LEGACY
          cluster_names: [xds_cluster]
          refresh_delay:
            seconds: 5
  - name: service2
    connect_timeout: 0.250s
    type: EDS
    lb_policy: round_robin
    http2_protocol_options: {}
    eds_cluster_config:
      eds_config:
        api_config_source:
          api_type: REST_LEGACY
          cluster_names: [xds_cluster]
          refresh_delay:
            seconds: 5
  - name: jaeger
    connect_timeout: 1s
    type: strict_dns
    lb_policy: round_robin
    hosts:
    - socket_address:
        address: jaeger
        port_value: 9411
  - name: xds_cluster
    connect_timeout: 0.25s
    type: strict_dns
    lb_policy: ROUND_ROBIN
    # http2_protocol_options: {}
    hosts: [{ socket_address: { address: discovery, port_value: 8080 }}]
tracing:
  http:
    name: envoy.zipkin
    config:
      collector_cluster: jaeger
      collector_endpoint: "/api/v1/spans"
admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8001
